--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -15,5 +15,6 @@ plugins:
   - '@typescript-eslint'
 rules: {
   no-use-before-define: off,
-  indent: ['error', 2]
+  indent: ['error', 2],
+  no-unused-vars: warn,
 }
