--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/react-icons": "^3.0.0",
     "@types/styled-components": "^5.1.20",
     "@types/webfontloader": "^1.6.34",
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
+    "sweetalert2": "^11.3.5",
     "typescript": "^4.4.2",
     "webfontloader": "^1.6.28"
   },
