OTH: update meta information

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Liven E-commerce",
-  "name": "Liven E-commerce webapp",
+  "short_name": "Generic E-commerce",
+  "name": "Generic E-commerce webapp",
   "icons": [
     {
       "src": "favicon.ico",
